@@ -13,6 +13,10 @@ Limitations:
 
 
 Revision History:
+28-Jun-2004
+   Problems fixed:
+       1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.
+
 27-Jun-2004
    Thanks to Fabrizio Giustina for adding an entity-resolver to support local use of ServletUnit with a regular web.xml
 
